RM38512 - fix contact us logos and tables on small devices

--- a/src/components/card/site-metadata-card/site-metadata-card.scss
+++ b/src/components/card/site-metadata-card/site-metadata-card.scss
@@ -54,8 +54,7 @@
 
   img {
     display: inline-block;
-    margin-right: 50px;
-    margin-bottom: 25px;
+    margin: 0 15px 25px;
 
     &:last-child {
       margin-right: 0;
